Signed-off-by: charlie9526 <chanaka.16@cse.mrt.ac.lk>

--- a/python_client/settings.json
+++ b/python_client/settings.json
@@ -15,7 +15,7 @@ PUT test_lyrics
       "filter":{
         "3_100_edgegrams":{
           "type": "edge_ngram",
-          "min_gram": 2,
+          "min_gram": 3,
           "max_gram": 100
         },
         "mine_stop_filter":{
@@ -48,7 +48,7 @@ PUT test_lyrics
         "type": "text"
       },
       "key":{
-        "type": "keyword"
+        "type": "text"
       },
       "views":{
         "type": "long"
